--- a/src/components/views/styles/PageView.css
+++ b/src/components/views/styles/PageView.css
@@ -29,3 +29,20 @@ body {
 .overview {
   max-width: 55em;
 }
+
+.popup > * {
+  cursor: pointer;
+  pointer-events: auto;
+  transition: 300ms opacity, 300ms transform;
+}
+
+.popup:hover > *:hover {
+  transform: scale(1.1);
+  opacity: 0.5;
+}
+
+.portfolio-image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
