--- a/src/components/views/styles/MyPortfolioView.css
+++ b/src/components/views/styles/MyPortfolioView.css
@@ -1,18 +1,17 @@
+/**
+ ************************************
+ *              Home              
+ ************************************ 
+**/
+
 #home {
   min-height: 100vh;
   height: 100vh;
   display: flex;
   align-items: center;
-  border-bottom: 0px;
   background: white;
   font-weight: 400;
   padding: 0rem 5.6rem;
-  margin-bottom: 0;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: -1;
 }
 
 .home-title {
@@ -22,10 +21,76 @@
   text-align: left;
 }
 
-.name-text-color {
-  color: rgb(0, 170, 0);
-}
-
 .home-description {
   color: #3a3a3a;
+}
+
+/**
+ ************************************
+ *            Contact              
+ ************************************ 
+**/
+
+#contact {
+  min-height: 40vh;
+  height: 40vh;
+  background-image: linear-gradient(
+    135deg,
+    rgb(43, 176, 180),
+    rgb(114, 227, 231)
+  );
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.contact-title {
+  font-size: 3rem;
+  color: white;
+}
+
+/**
+ ************************************
+ *             Footer              
+ ************************************ 
+**/
+
+#footer {
+  min-height: 20vh;
+  height: 20vh;
+  background-image: linear-gradient(135deg, rgb(49, 49, 49), rgb(43, 43, 43));
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.social-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.social-links a {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: white;
+  font-size: 2.5rem;
+  width: 5rem;
+  height: 5rem;
+  transition: all 0.2s ease-in;
+}
+
+.social-links a:hover {
+  transform: translateY(-6px);
+  text-decoration: none;
+}
+
+.back-to-top i {
+  color: white;
+  transition: all 0.2s ease-in;
+}
+
+.back-to-top i:hover {
+  transform: translateY(-6px);
 }
