--- a/src/components/views/styles/MyPortfolioView.css
+++ b/src/components/views/styles/MyPortfolioView.css
@@ -32,8 +32,8 @@
 **/
 
 #about {
-  min-height: 65vh;
-  height: 65vh;
+  min-height: 70vh;
+  height: 70vh;
   background-image: linear-gradient(
     135deg,
     rgb(43, 176, 180),
@@ -50,9 +50,15 @@
 
 .about-description {
   color: white;
-  display: flex;
-  align-items: center;
-  text-align: center;
+  text-align: left;
+  font-size: 1.1rem;
+}
+
+.about-image {
+  width: 271px;
+  min-height: 300px;
+  height: 300px;
+  object-fit: cover;
 }
 
 /**
